--- a/css/syles.css
+++ b/css/syles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -78,4 +80,5 @@ header{
 h1{
 	color:white;
 	font-size:50px;
+	font-family: 'Roboto', sans-serif;
 }
