--- a/css/syles.css
+++ b/css/syles.css
@@ -1,13 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     text-decoration: none;
     list-style: none;
+	font-family: 'Roboto', sans-serif;
 }
-header{
-	background-color:#c8c8c8;
+body{
+	background-color: #e9e9e9;
 }
 .navbar{
     display: flex;
@@ -18,6 +19,7 @@ header{
 	background-color: #181818;
 	position:fixed;
 	top:0;
+	padding: 0 50px;
 }
 .logo img{
 	/* width: 60px; */ 
@@ -34,15 +36,15 @@ header{
 }
 #input-busqueda{
 	outline: none;
-	height:30px;
-	width: 400px;
+	height:40px;
+	width: 600px;
 	border-radius: 10px;
 	border: 1px solid #39c;
 }
 .submit-busqueda{
 	border:0;
 	border-radius: 10px;
-	height: 30px;
+	height: 40px;
 	width: 60px;
 	background-color: #75a83e;
 	color:white;
@@ -75,10 +77,103 @@ header{
 .imagenfondo{
 	background-image:url("../images/fondoDifuminado.webp");
 	background-size: cover;
-	background-position-x: left;
+	background-position-y: center;
 }
 h1{
 	color:white;
 	font-size:50px;
 	font-family: 'Roboto', sans-serif;
+	font-weight: 700;
+}
+footer{
+	background-color: #181818;
+}
+.footer{
+	height: 60px;
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	color: white;
+	padding: 10px;
+}
+.main-index{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.seccion{
+	margin: 20px 0;
+	text-align: center;
+}
+.vermas{
+	margin: 100px;
+	border: 0;
+	background-color: #181818;
+	color: white;
+	font-size: 20px;
+	font-weight: 700;
+	width: 125px;
+	height: 50px;
+	margin-bottom: 0;
+}
+.seccion h2{
+	margin: 50px 0 70px 0;
+	font-size: 50px;
+	font-weight: 700;
+	color: #181818;
+	text-align: left;
+}
+.personajes, .locaciones, .episodios{
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	gap: 60px;
+}
+.card-personaje{
+	width: 200px;
+	height: 360px;
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.50);
+	border-radius: 5px;
+	background-color: white;
+}
+.contenido-personaje{
+	height: 100px;
+}
+.card-personaje h5{
+	font-weight: 700;
+	margin: 0;
+	padding: 5px;
+}
+.card-personaje p{
+	font-size: 12.5px;
+	margin: 0;
+}
+.imagen-personaje img{
+	width: 200px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+.fav-personaje{
+	display: flex;
+	padding: 10px;
+}
+.boton-favorito{
+	border: 0;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	background-color: rgb(0, 62, 66);
+	color: rgb(92, 255, 247);
+}
+.boton-favorito:hover{
+	color: rgb(65, 184, 178);
+}
+.card-episodio{
+	background-color: white;
+	width: 400px;
+	padding: 10px;
+	text-align: left;
+}
+.fav-episodio button {
+	position: absolute;
 }
