Añadiendo el delete de favoritos

--- a/css/syles.css
+++ b/css/syles.css
@@ -75,7 +75,7 @@ body{
 	text-decoration:underline;
 }
 .imagenfondo{
-	background-image:url("../images/fondoDifuminado.webp");
+	background-image:url("../images/fondorick.webp");
 	background-size: cover;
 	background-position-y: center;
 }
