--- a/css/syles.css
+++ b/css/syles.css
@@ -178,7 +178,7 @@ footer{
 	color: #ffecf3;
 }
 .boton-favorito:hover{
-	color: #ffa5c8);
+	color: #ffa5c8;
 }
 .card-episodio, .card-locacion{
 	background-color: white;
@@ -202,8 +202,16 @@ footer{
 	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.20);
 }
 .main-favoritos{
-	margin-top: 150px;
+	margin-top: 50px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-bottom: 100px;
 }
 .main-favoritos section {
-	margin: 100px
+	margin: 50px 0;
+}
+.vacio{
+	display: flex;
+	justify-content: center;
 }
